--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>fr.skytasul</groupId>
 	<artifactId>beautyquests-expansion</artifactId>
-	<version>1.2.8</version>
+	<version>1.2.9</version>
 	<packaging>jar</packaging>
 
 	<name>BeautyQuests Expansion</name>
@@ -13,8 +13,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 		<beautyquests.version>1.0.4</beautyquests.version>
 	</properties>
 
@@ -60,7 +60,11 @@
 							<relocations>
 								<relocation>
 									<pattern>fr.skytasul.glowingentities</pattern>
-									<shadedPattern>fr.skytasul.quests.utils.glowingentities</shadedPattern>
+									<shadedPattern>fr.skytasul.quests.expansion.utils.glowingentities</shadedPattern>
+								</relocation>
+								<relocation>
+									<pattern>fr.skytasul.reflection</pattern>
+									<shadedPattern>fr.skytasul.quests.expansion.utils.reflection</shadedPattern>
 								</relocation>
 							</relocations>
 						</configuration>
@@ -123,7 +127,7 @@
 		<dependency>
 			<groupId>fr.skytasul</groupId>
 			<artifactId>glowingentities</artifactId>
-			<version>1.3.5</version>
+			<version>1.4.3</version>
 			<scope>compile</scope>
 		</dependency>
 
